--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop, email ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop, email ]
 
 permissions:
   contents: read
